test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/or_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(1)
  ||
  (
  void
  )
  const int(2)
  ;
  }
